<resources>
    <string name="app_name">Suw xojalıǵı. Admin</string>
    <string name="helper_login">Programmaǵa kiriw ushın login hám parolińizdi kiritiń</string>
    <string name="et_hint_login">Login</string>
    <string name="et_hint_password">Parol</string>
    <string name="btn_login">Kiriw</string>
    <string name="reports">Shaǵımlar</string>
    <string name="dashboard">Tıykarǵı bet</string>
    <string name="contracts">Shártnamalar</string>
    <string name="account_settings">Akkount sazlawları</string>
    <string name="language">Til</string>
    <string name="dark_mode">Túngi rejim</string>
    <string name="notifications">Bildirtpeler</string>
    <string name="log_out">Akkounttan shıǵıw</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="phone_number">+%1$s</string>
    <string name="log_out_warning">Akkounttan shıqsańız, programmadan paydalanıw ushın qayta login hám parolińızdi kiritiwińızge tuwra keledi. </string>
    <string name="dismiss">Biykar etiw</string>
    <string name="close">Shıǵıw</string>
    <string name="add_farmer">Fermer qosıw</string>
    <string name="farmers">Fermerler</string>
    <string name="add_sensor">Úskene qosıw</string>
    <string name="add_profile_pic">Profil foto qosıw</string>
    <string name="last_name">Familya</string>
    <string name="name">Atı</string>
    <string name="middle_name">Ákesiniń atı</string>
    <string name="gender">Jınsı</string>
    <string name="passport_series">Passport seriya</string>
    <string name="phone">Telefon nomer</string>
    <string name="username">Login</string>
    <string name="password">Parol</string>
    <string name="add_new_farmer">Fermer qosıw</string>
    <string name="no_photo_selected">Súwret saylanbadı</string>
    <string name="remove_profile_photo">Profil foto alıp taslaw</string>
    <string name="female">Hayal</string>
    <string name="male">Erkek</string>
    <string name="region">Rayon</string>
    <string name="fill_all_blanks">Barlıq orınlardı toltırıń</string>
    <string name="farmer_created">%1$s %2$s atlı fermer jaratıldı.</string>
    <string name="permission_denied_try_again">Ruxsat berilmegen. Qaytadan háreket etip kóriń.</string>
    <string name="download_started">Júklew baslandı</string>
    <string name="add_contract">Kontrakt jaratıw</string>
    <string name="add_file">Fayl qosıw</string>
    <string name="name_contract">Kontrakt atı</string>
    <string name="helper_add_contract_file">*Qabıllanatuǵın fayl formatları: \nFoto: PNG/JPEG/JPG \nHújjet: PDF, DOCX, XLSX</string>
    <string name="file_has_not_uploaded">Fayl júklenbedi</string>
    <string name="profile_farmer">Fermer profili</string>
    <string name="error_you_are_not_admin">Siz admin emessiz</string>
    <string name="contract_successfully_created">%1$s atlı kontrakt jaratıldı</string>
    <string name="imei">IMEI</string>
    <string name="devices">Úskeneler</string>
    <string name="sensor_settings">Úskene sazlawları</string>
    <string name="helper_imei">15 cifrdan ibarat úskene mánzili</string>
    <string name="all_coordination">Kordinatalar</string>
    <string name="add_coordination">Kordinata qosıw</string>
    <string name="q">Q</string>
    <string name="h">H</string>
    <string name="coordination_successfully_created">%1$s hám %2$s jaratıldı</string>
    <string name="attach_sensor">Úskeneni jalǵaw</string>
    <string name="helper_attach_sensor_to_farmer">Fermerge jalǵaw ushın úskene ústin basıń</string>
    <string name="check_network_connection">Internet baylanısıńızdı tekseriń</string>
    <string name="k">K</string>
    <string name="height">Biyiklik</string>
</resources>