<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:background="?colorSurface"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_add_coordination"
            app:navigationIcon="@drawable/round_left_24"
            app:navigationIconTint="@color/white"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/add_coordination"
            app:titleTextColor="@color/white"
            app:menu="@menu/menu_add_coordination"
            app:layout_scrollFlags="scroll|enterAlways" />


    </com.google.android.material.appbar.AppBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_add_h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="?textInputOutlinedStyle"
            android:hint="@string/h">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_add_h"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_add_q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="?textInputOutlinedStyle"
            android:hint="@string/q">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_add_q"
                android:layout_width="match_parent"
                android:inputType="numberDecimal"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>



</LinearLayout>