<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorSurface"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_create_contract"
            app:navigationIconTint="@color/white"
            app:navigationIcon="@drawable/round_left_24"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            app:title="@string/add_contract"
            app:titleTextColor="@color/white"
            app:menu="@menu/menu_add_contract"
            app:layout_scrollFlags="scroll|enterAlways" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_add_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:background="@drawable/shape_corner"
                android:padding="4dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                >


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    >


                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageview_add_file_icon"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/round_file_add_24" />


                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textview_caption_add_file"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/add_file"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_view_add_file_helper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/helper_add_contract_file"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_add_tile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="?textInputOutlinedStyle"
                android:hint="@string/name_contract">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_add_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>




    </androidx.core.widget.NestedScrollView>




</LinearLayout>