<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/shape_corner"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp">


            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:shapeAppearanceOverlay="?shapeAppearanceCornerLarge"
                android:scaleType="centerCrop"
                android:src="@drawable/round_account_circle_24" />


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textview_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Palenshe  Tolenshiev"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/textview_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Fermer"
                android:textStyle="bold" />


        </LinearLayout>



    </LinearLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape_corner">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_settings"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/round_right_24" />



    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_margin="8dp"
        android:background="@drawable/shape_corner">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/round_right_24" />



    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/txt_dark_mode"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_dark_mode"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:theme="@style/CustomSwitchColor"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/txt_notification"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_notification"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:theme="@style/CustomSwitchColor"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>







    </LinearLayout>


    <FrameLayout
        android:id="@+id/layoutLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FEF0F0"
        android:background="@drawable/shape_corner"
        android:layout_margin="8dp"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/textViewLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/colorWarning"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/round_logout_24"
            app:drawableTint="@color/colorWarning" />

    </FrameLayout>



</LinearLayout>


